[wheel]
universal = 1

[metadata]
name = martini_sour
author = Fabian Grunewald
author_email = f.grunewald@rug.nl
version = 0.0.1
description_file = README.md
description-content-type = text/markdown; charset=UTF-8
url = https://github.com/marrink-lab/martini_sour
license = Apache 2.0
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords = Martini coarse-grain titration constant pH

[options]
packages = find:
setup-requires =
    setuptools >= 46.4.0
    pbr
install-requires =  # ?? requires-dist?
    pbr
    numpy
    decorator == 4.4.2
    networkx ~= 2.0
    vermouth >= 0.7.1
    MDAnalysis
zip-safe = False


#[build_sphinx]
#source-dir = doc/source
#build-dir = doc/build
#warning-is-error = True
#builder = html
